Pass Validators - MOE

--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
             </section>
         </main>
     <footer>
-        <p>University of Michigan School of Information <br/>
+        <p>University of Michigan School of Information
             &copy; Fanny, Moe, Shawn - Web Design 2024 </p>
     </footer>
     </body>
 </html>
-    
